--- a/Patches/ares_user_defconfig
+++ b/Patches/ares_user_defconfig
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -321,9 +321,9 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-CONFIG_MODULE_FORCE_LOAD=y
+# CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
+# CONFIG_MODULE_FORCE_UNLOAD is not set
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_MODULE_SIG is not set
@@ -454,6 +454,7 @@ CONFIG_ARM64_ERRATUM_845719=y
 # CONFIG_ARM64_ERRATUM_843419 is not set
 CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_ARM64_ERRATUM_1542418=y
+CONFIG_ARM64_ERRATUM_1188873=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
 CONFIG_CAVIUM_ERRATUM_27456=y
@@ -546,6 +547,7 @@ CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_ARM64_SSBD=y
+CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_ARM64_TAGGED_ADDR_ABI=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
@@ -1051,7 +1053,7 @@ CONFIG_NET_SCH_HTB=y
 # CONFIG_NET_SCH_QFQ is not set
 # CONFIG_NET_SCH_CODEL is not set
 # CONFIG_NET_SCH_FQ_CODEL is not set
-CONFIG_NET_SCH_FQ=y
+# CONFIG_NET_SCH_FQ is not set
 # CONFIG_NET_SCH_HHF is not set
 # CONFIG_NET_SCH_PIE is not set
 CONFIG_NET_SCH_INGRESS=y
@@ -1162,8 +1164,8 @@ CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
-CONFIG_NL80211_TESTMODE=y
-CONFIG_CFG80211_DEVELOPER_WARNINGS=y
+# CONFIG_NL80211_TESTMODE is not set
+# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
 # CONFIG_CFG80211_DEFAULT_PS is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
@@ -1245,6 +1247,7 @@ CONFIG_GENERIC_ARCH_TOPOLOGY=y
 # CONFIG_BRCMSTB_GISB_ARB is not set
 # CONFIG_SIMPLE_PM_BUS is not set
 # CONFIG_VEXPRESS_CONFIG is not set
+CONFIG_MILLET=y
 # CONFIG_CONNECTOR is not set
 # CONFIG_GNSS is not set
 # CONFIG_MTD is not set
@@ -1263,8 +1266,8 @@ CONFIG_OF_RESERVED_MEM=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
-# CONFIG_ZRAM_WRITEBACK is not set
-# CONFIG_MIUI_ZRAM_MEMORY_TRACKING is not set
+CONFIG_ZRAM_WRITEBACK=y
+CONFIG_MIUI_ZRAM_MEMORY_TRACKING=y
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
@@ -1473,7 +1476,7 @@ CONFIG_MTK_LPM_GS_DUMP_VERSION="v1"
 # CONFIG_MTK_LPM_MT6877 is not set
 CONFIG_MTK_LPM_MT6885=y
 # CONFIG_MTK_LPM_MT6781 is not set
-# CONFIG_XM_LPM_STATE_RECORDS is not set
+CONFIG_XM_LPM_STATE_RECORDS=y
 
 #
 # MultiMedia, Display, Camera
@@ -1481,8 +1484,8 @@ CONFIG_MTK_LPM_MT6885=y
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov64b40sunny_mipi_raw ov16a1qofilm_mipi_raw gc02m1sunny_mipi_raw imx355sunny_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
-# CONFIG_MTK_SVP_ON_MTEE_SUPPORT is not set
-# CONFIG_MTK_DRM_KEY_MNG_SUPPORT is not set
+CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
 # CONFIG_MTK_MT6382_BDG is not set
 CONFIG_MTK_CAMERA_ISP=y
 CONFIG_MTK_CAMERA_ISP_RSC_SUPPORT=y
@@ -1689,7 +1692,7 @@ CONFIG_NFC_ST54_SPI=y
 #
 # Security
 #
-# CONFIG_MTK_TEE_GP_SUPPORT is not set
+CONFIG_MTK_TEE_GP_SUPPORT=y
 # CONFIG_TRUSTONIC_TEE_SUPPORT is not set
 CONFIG_MICROTRUST_TEE_SUPPORT=y
 CONFIG_MICROTRUST_TEE_VERSION="400"
@@ -1707,6 +1710,8 @@ CONFIG_MICROTRUST_TZ_LOG=y
 # CONFIG_MICROTRUST_TZDRIVER_DYNAMICAL_DEBUG is not set
 # CONFIG_TRUSTKERNEL_TEE_SUPPORT is not set
 CONFIG_MTK_PROT_MEM_SUPPORT=y
+CONFIG_MTK_SECURE_MEM_SUPPORT=y
+CONFIG_MTK_WFD_SMEM_SUPPORT=y
 # CONFIG_MTK_HAPP_MEM_SUPPORT is not set
 # CONFIG_MTK_SDSP_MEM_SUPPORT is not set
 # CONFIG_MTK_SDSP_SHARED_MEM_SUPPORT is not set
@@ -1829,7 +1834,8 @@ CONFIG_LEDS_MTK_DISP=y
 # CONFIG_RT4831A_I2C is not set
 CONFIG_MTK_IRTX_PWM_SUPPORT=y
 CONFIG_MTK_PWM=y
-CONFIG_MTK_SYSTRACKER_V2=y
+# CONFIG_MTK_SYSTRACKER_DISABLE=y
+# CONFIG_MTK_SYSTRACKER_V2 is not set
 CONFIG_MTK_BOOT=y
 CONFIG_MTK_BOOT_REASON=y
 CONFIG_MTK_CHIP=y
@@ -1844,7 +1850,7 @@ CONFIG_MTK_SCHED_INTEROP=y
 #
 # MTK Energy Aware Scheduler Plus
 #
-CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
 CONFIG_MTK_SCHED_MULTI_GEARS=y
 # CONFIG_MTK_SCHED_BL_FIRST is not set
 
@@ -1879,10 +1885,7 @@ CONFIG_MTK_AUDIODSP_SUPPORT=y
 # CONFIG_MTK_MUSB_SW_WITCH_MODE is not set
 # CONFIG_MTK_MUSB_PORT0_LOWPOWER_MODE is not set
 CONFIG_MTK_RAM_CONSOLE=y
-CONFIG_MTK_AEE_FEATURE=y
-CONFIG_MTK_AEE_AED=y
-CONFIG_MTK_AEE_IPANIC=y
-CONFIG_MTK_AEE_HANG_DETECT=y
+# CONFIG_MTK_AEE_FEATURE is not set
 # CONFIG_MTK_AEE_MRDUMP is not set
 # CONFIG_USBIF_COMPLIANCE is not set
 # CONFIG_USB_MU3D_PIO_ONLY is not set
@@ -1919,9 +1922,9 @@ CONFIG_MTK_DEVMPU_EMI=y
 # CONFIG_MTK_DEVMPU_SLOG is not set
 CONFIG_DEVMPU_MT6885=y
 # CONFIG_MTK_PERFMGR_TOUCH_BOOST is not set
-CONFIG_MTK_LOAD_TRACKER=y
+# CONFIG_MTK_LOAD_TRACKER is not set
 CONFIG_MTK_CPU_CTRL_CFP=y
-CONFIG_MTK_PERF_OBSERVER=y
+# CONFIG_MTK_PERF_OBSERVER is not set
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
@@ -1933,7 +1936,7 @@ CONFIG_MTK_GBE=y
 #
 # Performance, Power, and Thermal
 #
-CONFIG_MTK_PERF_TRACKER=y
+# CONFIG_MTK_PERF_TRACKER is not set
 CONFIG_MTK_LOWMEM_HINT=y
 # CONFIG_MTK_SKB_OWNER is not set
 # CONFIG_MTK_CORE_CTL is not set
@@ -2028,7 +2031,7 @@ CONFIG_LOG_TOO_MUCH_WARNING=y
 CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
 CONFIG_LOG_TOO_MUCH_DETECT_GAP=1
 CONFIG_CONSOLE_LOCK_DURATION_DETECT=y
-CONFIG_MTK_MLOG=y
+CONFIG_MTK_MLOG=n
 # CONFIG_MTK_CACHE_CONTROL is not set
 CONFIG_MTK_CACHE_PARTITION_CTRL=y
 CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=y
@@ -2036,6 +2039,7 @@ CONFIG_MTK_TINYSYS_MCUPM_SUPPORT=y
 # CONFIG_MTK_UNIFIED_DEBUG_INTERFACE is not set
 # CONFIG_MTK_OTP is not set
 # CONFIG_MTK_SDA is not set
+CONFIG_MI_MEMORY_SYSFS=y
 
 #
 # SCSI device support
@@ -2087,6 +2091,7 @@ CONFIG_UFSTW_IGNORE_GUARANTEE_BIT=y
 CONFIG_UFSTW_BOOT_ENABLED=y
 CONFIG_SCSI_SKHPB=y
 CONFIG_SCSI_UFS_CRYPTO=y
+# CONFIG_CLD is not set
 # CONFIG_SCSI_DEBUG is not set
 # CONFIG_SCSI_VIRTIO is not set
 # CONFIG_SCSI_LOWLEVEL_PCMCIA is not set
@@ -2849,6 +2854,7 @@ CONFIG_BQ2597X_CHARGE_PUMP=y
 # TI Technologies, Inc. Charger support
 #
 # CONFIG_CHARGER_LN8000 is not set
+# CONFIG_XM_POWER_DEBUG is not set
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=0
@@ -3419,10 +3425,10 @@ CONFIG_SND_MAX_CARDS=32
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_PROC_FS=y
 CONFIG_SND_VERBOSE_PROCFS=y
-CONFIG_SND_VERBOSE_PRINTK=y
-CONFIG_SND_DEBUG=y
-CONFIG_SND_DEBUG_VERBOSE=y
-CONFIG_SND_PCM_XRUN_DEBUG=y
+# CONFIG_SND_VERBOSE_PRINTK is not set
+# CONFIG_SND_DEBUG is not set
+# CONFIG_SND_DEBUG_VERBOSE is not set
+# CONFIG_SND_PCM_XRUN_DEBUG is not set
 CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
 CONFIG_SND_SEQ_HRTIMER_DEFAULT=y
@@ -3981,7 +3987,7 @@ CONFIG_MTK_EMMC_HW_CQ=y
 # CONFIG_MMC_MTK is not set
 # CONFIG_MMC_MTK_LEGACY_SDIO is not set
 # CONFIG_MMC_MTK_SDIO is not set
-CONFIG_MTK_MMC_DEBUG=y
+# CONFIG_MTK_MMC_DEBUG is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -4306,6 +4312,7 @@ CONFIG_MTK_ION=y
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_LNET is not set
 # CONFIG_GS_FPGABOOT is not set
+CONFIG_RTMM=y
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
 # CONFIG_FB_TFT is not set
 # CONFIG_WILC1000_SDIO is not set
@@ -5107,7 +5114,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=7
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
@@ -5171,8 +5178,8 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_SOFTLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_WQ_WATCHDOG is not set
-CONFIG_PANIC_ON_OOPS=y
-CONFIG_PANIC_ON_OOPS_VALUE=1
+# CONFIG_PANIC_ON_OOPS is not set
+CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
